# Regulus

./: .env.example  .gitignore  README.md  pyproject.toml
data/crosswalks/: crosswalks.csv
notebooks/: 01_ingest_and_lookup.ipynb  02_crosswalk_graph.ipynb
src/regulus/: __init__.py  cli.py  config.py  crosswalk.py  download.py  graph.py  graph_lookup.py  lookup.py  risk.py  schema.py  sources.py  standards_loader.py
src/regulus/ingest/: __init__.py  base.py  eu_ai_act.py  nist_ai_rmf.py
tests/: test_graph.py  test_ingest.py  test_lookup.py
